# radiomics-crew

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/panel/: agents.yaml  tasks.yaml
config/review/: agents.yaml  tasks.yaml
docs/: architecture.md  example_output.md  example_output_panel.md
examples/: presets.yaml  questions.md
knowledge/: ibsi_reporting_checklist.yaml
src/radiomics_crew/: __init__.py  cli.py  parsing.py  render.py  schemas.py  settings.py
src/radiomics_crew/crews/: __init__.py  base.py  panel_crew.py  review_crew.py
src/radiomics_crew/tools/: __init__.py  _http.py  europepmc.py  ibsi.py  pubmed.py
tests/: test_config.py  test_tools.py
